# smart_home_robot

./: .gitignore  README.md  env.example  requirements.txt  setup_user.sh
shr_dashboard/: README.md  package.xml  setup.cfg  setup.py
shr_dashboard/shr_dashboard/: __init__.py  config_service.py  web_server.py
shr_dashboard/shr_dashboard/static/: app.js  index.html  styles.css
shr_dashboard/test/: test_web_server_robot_state.py
shr_display/: README.md  package.xml  setup.cfg  setup.py
shr_display/config/: params.yaml  protocol_routines.json
shr_display/shr_display/: backup_and_reset_json.py  display_node.py  media_http_server.py  protocol_manager.py  zmq_interface.py
shr_display/test/: test_media_http_server.py  zmq_tester.py
shr_display/webapp/: app.py
shr_display/webapp/templates/: protocols.html
shr_human_interaction/: README.md  package.xml  setup.cfg  setup.py
shr_human_interaction/shr_human_interaction/: command_interpreter.py  human_interaction_node.py  tool_handlers.py
shr_human_interaction/shr_human_interaction/tool_configs/: tools.yaml
shr_msgs/: CMakeLists.txt
shr_msgs/action/: DockingRequest.action  QuestionRequest.action
simple_logger/: readme.md  setup.py
simple_logger/simple_logger/: discord_bot.py  log_discord.py  test.txt
smart_home_pytree/: README.md  package.xml  setup.py
smart_home_pytree/config/: Readme.md  exercise_routine copy.yaml  exercise_routine_test.yaml  house_config_example.yaml  house_info copy.yaml  house_info.yaml  house_info_old.yaml  house_info_update.yaml  nav2_params_sim.yaml  olson_info.yaml  olson_info_update.yaml  robbie_info.yaml  robbie_info_ola_test.yaml
smart_home_pytree/launch/: action_servers.launch.py  launch_action.launch.py  launch_move_tree.launch.py  real_robot.launch.py  sim_robot.launch.py
smart_home_pytree/robot_actions/: __init__.py  docking.py  generic_action_server.py  mock_dock_undock.py  play_video.py  play_video_locally.py  undocking.py  undocking_real.py
smart_home_pytree/smart_home_pytree/: __init__.py  human_interface.py  human_interface_publish.py  protocol_orchestrator.py  protocol_orchestrator_success_formats.py  protocol_orchestrator_updated.py  protocol_schema.py  protocol_tracker.py  registry.py  render_protocol_tree.py  robot_interface.py  trigger_monitor.py  utils.py
smart_home_pytree/smart_home_pytree/behaviors/: check_protocol_bb.py  check_robot_state_key.py  get_person_location.py  logging_behavior.py  (+3 more)
smart_home_pytree/smart_sensors/: charge_monitor.py  homeseer_sensor.py  pimu_monitor.py  smart_plug_node.py
smart_home_pytree/test/: README.md  gui_for_testing.py  instructions.txt  test_protocol_orchestrator.py  test_sanity_check.py
(+82 files in other folders)
