<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shr_dashboard</name>
  <version>0.1.0</version>
  <description>Network-accessible web dashboard for protocol design, robot status, and operator controls.</description>
  <maintainer email="moniruzzaman.akash@unh.edu">Akash</maintainer>
  <license>TODO: License declaration</license>

  <depend>smart_home_pytree</depend>
  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
