<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shr_human_interaction</name>
  <version>0.1.0</version>
  <description>SHR human-robot interaction: conversation + intent + action requests</description>
  <maintainer email="moniruzzaman.akash@unh.edu">Moniruzzaman Akash</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>shr_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>unique_identifier_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
